# opmet

./: CMakeLists.txt  L_R_2.sln  README.md  how to use.txt  Вывод-Отладка.txt
L_R_2/: CMakeLists.txt.txt  L_R_2.vcxproj  L_R_2.vcxproj.filters  file_helper.cpp  main.cpp  necessary_func.cpp  vec.cpp  vec.h
L_R_2/pic/: level_lines_for_roz.txt  вывод.nb
documents/: ~$чет лр2 опты.docx  отчет лр1 опты.docx  отчет лр4 опты.docx  отчет лр6 опты.docx  отчет лр8 опты.docx
pic/: points_for_roz.txt  внутренние штрафные функции.nb
src/: file_helper.h  matrix.cpp  matrix.h  necessary_func.h  simplex.cpp  simplex.h
src/pic/: level_lines_for_kvad.txt  points_for_kvad.txt
отчеты/: отчет лр2 опты.docx  отчет лр3 опты.docx  отчет лр5 опты.docx  отчет лр7 опты.docx
файлы для рисунков/: level_lines_for_kvad.txt  level_lines_for_roz.txt  points_for_kvad.txt  points_for_roz.txt  внутренние штрафные функции.nb  вывод.nb
